Fixes large image overflow in notes

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -2090,3 +2090,7 @@ tr .panel {
   border: 1px solid #18bc9c;
   background-color: #fff;
 }
+
+.notes-container img {
+  max-width: 100%;
+}
